commit sur la gestion du panier

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Commerce</title>
+    <title>Eelectro Accessory Market</title>
 </head>
 <body>
     <section class="n1">
@@ -14,9 +14,15 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Trad</a></li>
-                <li><a href="#">Card:<span id="quantite">0</span></a></li>
             </ul>
         </nav>
+        <div id="monPanier">
+          <a href="#">Card:<span id="quantite"> 0</span></a>
+          <ul id="leslistes">
+            <p>Votre Panier est vide</p>
+            
+          </ul>
+        </div>
     </section>
 
     <section class="n2">
